# alphagradient

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  about.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_docs.txt  search.html  searchindex.js  setup.cfg  stats.prof  todo.txt  tox.ini
.github/workflows/: documentation.yml  tests.yml
AlphaGradient/: __init__.py  _globals.py  agproxy.py  algorithm.py  constants.py  utils.py
AlphaGradient/algolib/: __init__.py  lib.py
AlphaGradient/data/: currency_info_raw.p  datatools.py  ledger
AlphaGradient/data/pickles/: STOCK_SPY
AlphaGradient/data/raw/: STOCK_SPY.csv
AlphaGradient/finance/: __init__.py  asset.py  collections.py  exchange_info.p  portfolio.py  standard.py  standard_asset_settings.json
LICENSES/: AENUM_LICENSE  P_TQDM_LICENSE  YFINANCE_LICENSE
_sources/: index.rst.txt
_sources/algolib/: TemplateAlgo.rst.txt  publishing.rst.txt
_sources/algolib/tutorials/: IndexHold.rst.txt  index.rst.txt
_sources/api/: globals.rst.txt  portfolio.rst.txt  utils.rst.txt
_sources/api/dtypes/: Annotations.rst.txt  Exceptions.rst.txt  index.rst.txt
_sources/api/standard/: Currency.rst.txt  index.rst.txt
_sources/guide/: algorithms.rst.txt  assets.rst.txt  backtesting.rst.txt  environments.rst.txt  index.rst.txt  ml.rst.txt  structure.rst.txt
_static/: documentation_options.js
algolib/: TemplateAlgo.html  index.html  publishing.html
algolib/nonstandard/: index.html
algolib/standard/: index.html
algolib/tutorials/: IndexHold.html  ThetaGang.html  index.html
alphagradient/: __init__.py  _algorithm.py  _globals.py  _proxy.py  agproxy.py  algorithm.py  dtypes.py  utils.py
alphagradient/_data/: __init__.py  _datatools.py
alphagradient/_finance/: __init__.py  _asset.py  _collections.py  _portfolio.py  _standard.py  currency_info.p  exchange_info.p  standard_asset_settings.yml
alphagradient/algolib/: __init__.py  _lib.py  lib.py
alphagradient/data/: datatools.py
alphagradient/finance/: __init__.py  asset.py  collections.py  portfolio.py  standard.py  standard_asset_settings.json
api/: algorithm.html  asset.html  environment.html  globals.html  index.html  portfolio.html  universe.html  utils.html
api/dtypes/: Annotations.html  Exceptions.html  index.html
api/dtypes/abstract/: Option.html  index.html
api/dtypes/data/: AssetData.html  index.html
api/dtypes/enums/: DataProtocol.html  EnvironmentStatus.html  Types.html  index.html
api/dtypes/metrics/: Backtest.html  Performance.html  Stats.html  index.html
api/dtypes/positions/: Cash.html  Position.html  index.html
api/standard/: Call.html  Currency.html  Put.html  Stock.html  index.html
docs/: build  conf.py
docs/_templates/: algorithm.rst  test.rst
docs/source/: Makefile  about.rst  alphagradient.algolib.rst  alphagradient.rst  build  conf.py  index.rst  modules.rst
guide/: algolib.html  algorithms.html  assets.html  backtesting.html  environments.html  index.html  ml.html  portfolios.html  structure.html  universes.html
quickstart/: index.html
tests/: unit_test.py
(+42 files in other folders)
