[metadata]
name = alphagradient
description = A tool for creating and backtesting financial algorithms
author = Nathan Heidacker
license = Apache License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    alphagradient
install_requires =
    p_tqdm>=1
    tqdm>=4
    bs4
    numpy>=1
    pandas>=1
    yfinance>=0.1
    aenum>=3
python_requires = >=3.6
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160