[metadata]
name = alphagradient
version = 0.0.0.14
url = https://github.com/nathanheidacker/alphagradient
description = A tool for creating and backtesting financial algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Heidacker
author_email = nathanheidacker2022@u.northwestern.edu
license = Apache License
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: End Users/Desktop
	Intended Audience :: Financial and Insurance Industry
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	Documentation = https://github.com/nathanheidacker/alphagradient
	Source Code = https://github.com/nathanheidacker/alphagradient

[options]
packages =
	find:
install_requires =
	p_tqdm>=1
	tqdm>=4
	bs4
	numpy>=1
	pandas>=1
	yfinance>=0.1
	aenum>=3
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	flake8>=3.9
	tox>=3.24

[flake8]
max-line-length = 160